dummy inventory repo
